@@ -19,3 +19,4 @@ f4a1d30db16876972a53d1abfcdaee90d1867b10 release-1.99.10
 7443862e7f66c5be3a57d4a209a32f04386c0e0c release-2.0.3
 172ca998a609a440541056dd73d80a21bce964c3 release-2.0.4
 23c6d344cd783b05212a2c0becf64b5687ab71b8 release-2.0.5
+385f7a779f6b4f4a646f9a7f5865391a121b077a release-2.0.6
