@@ -1,1 +1,1 @@
-VERSION=2.0.6
+VERSION=2.0.7
